--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
-.App {
-  text-align: center;
+/* General Form Styles */
+body{
+  background-color: black;
+  color: aliceblue;
+}
+form {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: black;
+  margin-top: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Input Fields */
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #c0492f;
+  border-radius: 4px;
+  color: aliceblue;
+  box-sizing: border-box;
+  background-color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Select Fields */
+select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #c0492f;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background-color: black;
+  font-size: 16px;
+  color: aliceblue;
+}
+
+/* Button Styles */
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #d95d3f; /* Background color */
+  color: #fff; /* Text color */
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+h1{
+  color: #c0492f;
+}
+button:hover {
+  background-color: #c0492f; /* Darker shade for hover effect */
+}
+
+button:disabled {
+  background-color:black;
+  cursor: not-allowed;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  form {
+      padding: 15px;
+  }
+
+  input[type="text"], select {
+      font-size: 14px;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* MentorList.css */
+/* styles.css */
+.mentor-list {
+  background-color: black;
+  padding: 20px;
+  margin: 40px 40px 0px 40px;
+  border-radius: 5px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap; /* Allows wrapping of items to new rows if needed */
+  gap: 20px; /* Adds space between the items */
+  justify-content: center; /* Centers items horizontally */
 }
 
-.App-link {
-  color: #61dafb;
+.mentor-list ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex; /* Ensures ul uses flex layout */
+  flex-direction: row; /* Aligns children (li) in a row */
+  flex-wrap: wrap; /* Allows wrapping if there's not enough space */
+  gap: 20px; /* Adds space between the items */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mentor-list li {
+  border: 1px solid #d95d3f;
+  padding: 10px;
+  border-radius: 5px;
+  width: 200px; /* Fixed width for items */
+}
+
+.mentor-list h3 {
+  margin: 0;
+  color: #c0492f;
+  font-weight: bold;
+}
+
+.mentor-list p {
+  margin: 5px 0;
+  font-family: cursive;
 }
